Cleanup the SQLTransaction and SQLTransactionBackend state dispatch to only honor a state transition request if the associated database hasn't been interrupted. https://bugs.webkit.org/show_bug.cgi?id=110247.

Reviewed by Antti Koivisto.

No new tests.

* Modules/webdatabase/SQLTransaction.cpp:
(WebCore::SQLTransaction::performPendingCallback):
(WebCore::SQLTransaction::computeNextStateAndCleanupIfNeeded):
* Modules/webdatabase/SQLTransaction.h:
* Modules/webdatabase/SQLTransactionBackend.cpp:
(WebCore::SQLTransactionBackend::computeNextStateAndCleanupIfNeeded):
(WebCore::SQLTransactionBackend::performNextStep):
* Modules/webdatabase/SQLTransactionBackend.h:



Canonical link: https://commits.webkit.org/128664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143489 268f45cc-cd09-0410-ab3c-d52691b4dbfc